--- a/pizzas/templates/pizzas/base.html
+++ b/pizzas/templates/pizzas/base.html
@@ -1,5 +1,6 @@
 <p>
 <a href ="{% url 'pizzas:index' %}">Bim's Pizzeria</a>
+<a href ="{% url 'pizzas:pizzas' %}">Pizza Choices</a>
 </p>
 
 {% block content %}{% endblock content %}
